--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,17 @@
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
+
 $background:#1C1B1F;
 $background_card:#2A2831;
 $on_card_color:#CCC2DC;
 $on_card_color_hover:#e4d9f5;
 
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
 /* Указываем box sizing */
 *,
 *::before,
@@ -106,7 +115,6 @@ header{
         transition: cubic-bezier(0.075, 0.82, 0.165, 1);
         transition: 200ms;
     }
-
     .card {
         background-color: $background_card;
         border-radius: 24px;
@@ -139,4 +147,61 @@ header{
             }
         }
     }
+}
+
+nav {
+  box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.3), 0px 4px 4px rgba(0, 0, 0, 0.3);
+  background: #2A2831;
+  position: sticky;
+  margin-top: 40px;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  color: $on_card_color;
+  span {
+    font-size: 16px;
+  }
+  .navbar__item {
+    width: 93px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    text-decoration: none;
+    color: $on_card_color;
+
+    * {
+      transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+      transition: 200ms;
+    }
+
+    .navbar__item_box{
+      width: 64px;
+      height: 32px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navbar__item_text {
+      text-align: center;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.2px;
+    }
+  }
+}
+
+.navbar__item_active {
+  .navbar__item_box{
+    background-color: #4A4458;
+    border-radius: 16px;
+  }
 }
