--- a/src/App.scss
+++ b/src/App.scss
@@ -138,6 +138,7 @@ header{
             }
             .card__description {
                 font-size: 16px;
+                line-height: 24px;
                 font-weight: 400;
             }
         }
