--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,33 @@
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
 
-$background:#1C1B1F;
-$background_card:#2A2831;
-$on_card_color:#CCC2DC;
-$on_card_color_hover:#e4d9f5;
+$headline_big: 28px;
+$headline_medium: 24px;
+$headline_small: 20px;
+
+$background: #1C1B1F;
+$background_card: #2A2831;
+$on_card_color: #CCC2DC;
+$on_card_color_hover: #e4d9f5;
 
 .material-symbols-rounded {
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
+    font-variation-settings:
+        'FILL' 1,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
 }
+
 /* Указываем box sizing */
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* Убираем внутренние отступы */
 ul[class],
 ol[class] {
-  padding: 0;
+    padding: 0;
 }
 
 /* Убираем внешние отступы */
@@ -40,29 +45,29 @@ figcaption,
 blockquote,
 dl,
 dd {
-  margin: 0;
+    margin: 0;
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
-  list-style: none;
+    list-style: none;
 }
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+    text-decoration-skip-ink: auto;
 }
 
 /* Упрощаем работу с изображениями */
 img {
-  max-width: 100%;
-  display: block;
+    max-width: 100%;
+    display: block;
 }
 
 /* Указываем понятную периодичность в потоке данных у article*/
-article > * + * {
-  margin-top: 1em;
+article>*+* {
+    margin-top: 1em;
 }
 
 /* Наследуем шрифты для инпутов и кнопок */
@@ -70,17 +75,17 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+    font: inherit;
 }
 
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+    * {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
 }
 
 main {
@@ -97,7 +102,7 @@ body {
     padding-bottom: 80px;
 }
 
-header{
+header {
     margin-top: 56px;
 }
 
@@ -106,36 +111,43 @@ header{
     grid-template-columns: 1fr 1fr;
     gap: 24px;
     margin-top: 40px;
+
     * {
         transition: cubic-bezier(0.075, 0.82, 0.165, 1);
         transition: 200ms;
     }
+
     .card {
         background-color: $background_card;
         border-radius: 24px;
         text-decoration: none;
         color: $on_card_color;
 
-        &:hover{
+        &:hover {
             color: $on_card_color_hover;
             border-radius: 50px;
-            .card__img{
+
+            .card__img {
                 border-radius: 50px;
             }
         }
+
         .card__img {
             height: 200px;
             border-radius: 24px;
         }
-        .card__text{
+
+        .card__text {
             display: flex;
             flex-direction: column;
             gap: 8px;
             padding: 24px;
-            .card__title{
+
+            .card__title {
                 font-size: 24px;
                 font-weight: 500;
             }
+
             .card__description {
                 font-size: 16px;
                 line-height: 24px;
@@ -146,57 +158,59 @@ header{
 }
 
 nav {
-  box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.3), 0px 4px 4px rgba(0, 0, 0, 0.3);
-  background: #2A2831;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  color: $on_card_color;
-  span {
-    font-size: 16px;
-  }
-  .navbar__item {
-    width: 93px;
+    box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.3), 0px 4px 4px rgba(0, 0, 0, 0.3);
+    background: #2A2831;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 5px;
-    text-decoration: none;
+    justify-content: center;
+    gap: 8px;
     color: $on_card_color;
 
-    * {
-      transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-      transition: 200ms;
+    span {
+        font-size: 16px;
     }
 
-    .navbar__item_box{
-      width: 64px;
-      height: 32px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    .navbar__item {
+        width: 93px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        text-decoration: none;
+        color: $on_card_color;
 
-    .navbar__item_text {
-      text-align: center;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 16px;
-      letter-spacing: 0.2px;
+        * {
+            transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+            transition: 200ms;
+        }
+
+        .navbar__item_box {
+            width: 64px;
+            height: 32px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .navbar__item_text {
+            text-align: center;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 16px;
+            letter-spacing: 0.2px;
+        }
     }
-  }
 }
 
 .navbar__item_active {
-  .navbar__item_box{
-    background-color: #4A4458;
-    border-radius: 16px;
-  }
+    .navbar__item_box {
+        background-color: #4A4458;
+        border-radius: 16px;
+    }
 }
