add settings and change language

--- a/src/App.scss
+++ b/src/App.scss
@@ -212,6 +212,7 @@ nav {
             font-size: 12px;
             line-height: 16px;
             letter-spacing: 0.2px;
+            font-family: 'Roboto' , sans-serif;
         }
     }
 }
