--- a/src/views/Settings/Settings.scss
+++ b/src/views/Settings/Settings.scss
@@ -1,22 +1,15 @@
 .settings {
-    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     font-family: 'Roboto', sans-serif;
     color: #E8DEF8;
 
-    h1 {
-        font-size: 28px;
-        font-weight: 500;
-        line-height: 40px;
-        margin-bottom: 40px;
+    .interface__section {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
     }
-
-    h2 {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 28px;
-        margin-bottom: 14px;
-    }
-
 
     form {
         display: flex;
