--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,24 @@
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
 @import "./NullStyles.scss";
 
+:root[data-theme='dark']{
+    --background: #1C1B1F;
+    --background_secondary: #2A2831;
+    --on_background: #E8DEF8;
+    --on_secondary: #CCC2DC;
+    --on_secondary_hover: #e4d9f5;
+    --secondary_active:#4A4458;
+}
+
+:root[data-theme='light']{
+    --background: #FFFBFE;
+    --background_secondary: #F3EDF7;
+    --on_background: #1C1B1F;
+    --on_secondary: #1D192B;
+    --on_secondary_hover: #201d2c;
+    --secondary_active:#E8DEF8;
+}
+
 // Font variables
 $headline_big: 28px;
 $headline_medium: 24px;
@@ -12,13 +30,6 @@ $border_radius: 24px;
 $gap: 24px;
 $content_spacing: 40px;
 
-// Colors variables
-$background: #1C1B1F;
-$background_secondary: #2A2831;
-$on_background: #E8DEF8;
-$on_secondary: #CCC2DC;
-$on_secondary_hover: #e4d9f5;
-
 main {
     margin-left: auto;
     margin-right: auto;
@@ -27,8 +38,8 @@ main {
 }
 
 body {
-    color: $on_background;
-    background-color: $background;
+    color: var(--on_background);
+    background-color: var(--background);
     font-family: Roboto;
     height: 100%;
     padding-bottom: 80px;
@@ -52,6 +63,7 @@ h3 {
 }
 
 header {
+    color: var(--on_background);
     margin-top: 56px;
 }
 
@@ -67,13 +79,13 @@ header {
     }
 
     .card {
-        background-color: $background_secondary;
+        background-color: var(--background_secondary);
         border-radius: $border_radius;
         text-decoration: none;
-        color: $on_secondary;
+        color: var(--on_secondary);
 
         &:hover {
-            color: $on_secondary_hover;
+            color: var(--on_secondary_hover);
             border-radius: 50px;
 
             .card__img {
@@ -108,7 +120,7 @@ header {
 
 nav {
     box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.3), 0px 4px 4px rgba(0, 0, 0, 0.3);
-    background: $background_secondary;
+    background: var(--background_secondary);
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -117,7 +129,7 @@ nav {
     align-items: center;
     justify-content: center;
     gap: 8px;
-    color: $on_secondary;
+    color: var(--on_secondary);
 
     span {
         font-size: $text_small;
@@ -131,7 +143,7 @@ nav {
         align-items: center;
         gap: 5px;
         text-decoration: none;
-        color: $on_secondary;
+        color: var(--on_secondary);
 
         * {
             transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
@@ -160,7 +172,7 @@ nav {
 
 .navbar__item_active {
     .navbar__item_box {
-        background-color: #4A4458;
+        background-color: var(--secondary_active);
         border-radius: 16px;
     }
 }
@@ -170,4 +182,75 @@ nav {
     flex-direction: column;
     gap: 4px;
     margin-top: 40px;
+}
+
+.settings {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    font-family: 'Roboto', sans-serif;
+    color: var(--on_background);
+
+    .interface__section {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+
+        fieldset {
+            padding: 0;
+            border: 0;
+            display: flex;
+            flex-direction: row;
+            gap: 13px;
+            align-items: center;
+
+            p {
+                font-size: 18px;
+                line-height: 21px;
+                font-weight: 400;
+            }
+
+            select {
+                box-sizing: border-box;
+                font-size: 14px;
+                line-height: 20px;
+                font-weight: 500;
+                padding: 0px 12px;
+                height: 32px;
+                background-color: var(--background_secondary);
+                border-radius: 12px;
+                border:0;
+                color:inherit;
+
+                &:focus{
+                    outline: none;
+                }
+
+            }
+
+            .slider{
+               width: 32px; 
+               height: 16px;
+               background-image: url('./img/slider-circle.svg'),url('./img/slider-back.svg');
+               background-repeat: no-repeat;
+               cursor: pointer;
+               transition: background-position 0.3s;
+            }
+
+            .slider.right{
+                background-position: left center, center;
+            }
+
+            .slider.left{
+                background-position: right center , center;
+            }
+        }
+    }
+
 }
