--- a/src/App.scss
+++ b/src/App.scss
@@ -237,7 +237,7 @@ nav {
             .slider{
                width: 32px; 
                height: 16px;
-               background-image: url('./img/slider-circle.svg'),url('./img/slider-back.svg');
+               background-image: url('./views/Settings/img/slider-circle.svg'),url('./views/Settings/img/slider-back.svg');
                background-repeat: no-repeat;
                cursor: pointer;
                transition: background-position 0.3s;
