--- a/src/App.scss
+++ b/src/App.scss
@@ -190,6 +190,8 @@ nav {
         max-width: fit-content;
         max-height: fit-content;
         border-radius: 15px;
+        cursor: pointer;
+
 
         span {
             font-size: 18px;
@@ -326,6 +328,10 @@ nav {
             width: fit-content;
         }
 
+        .whitespace{
+            min-width: 10px;
+        }
+
         .user__typings {
             width: 936px;
             position: absolute;
@@ -347,11 +353,13 @@ nav {
             display: inline-block;
             position: absolute;
             border-radius: 3px;
-            margin-top: 4px;
-            margin-left: 2px;
-            width: 4px;
+            //margin-top: 4px;
+            //margin-left: 2px;
+            //width: 4px;
             height: 24px;
-            background: var(--on_background);
+            font-size: $heading_medium  ;
+            color: var(--on_background);
+            //background: var(--on_background);
         }
     }
 
